; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_parse.c_PICE_strtok.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_parse.c_PICE_strtok.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PICE_strtok.szCurrString = internal global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @PICE_strtok(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  store i8* %10, i8** @PICE_strtok.szCurrString, align 8
  %11 = load i8*, i8** @PICE_strtok.szCurrString, align 8
  %12 = call i32 @CompactString(i8* %11)
  br label %13

13:                                               ; preds = %9, %1
  %14 = load i8*, i8** @PICE_strtok.szCurrString, align 8
  %15 = call i64 @PICE_strlen(i8* %14)
  store i64 %15, i64* %5, align 8
  %16 = load i64, i64* %5, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %13
  store i8* null, i8** @PICE_strtok.szCurrString, align 8
  store i8* null, i8** %2, align 8
  br label %46

19:                                               ; preds = %13
  store i64 0, i64* %6, align 8
  br label %20

20:                                               ; preds = %36, %19
  %21 = load i64, i64* %6, align 8
  %22 = load i64, i64* %5, align 8
  %23 = icmp ult i64 %21, %22
  br i1 %23, label %24, label %39

24:                                               ; preds = %20
  %25 = load i8*, i8** @PICE_strtok.szCurrString, align 8
  %26 = load i64, i64* %6, align 8
  %27 = getelementptr inbounds i8, i8* %25, i64 %26
  %28 = load i8, i8* %27, align 1
  %29 = sext i8 %28 to i32
  %30 = icmp eq i32 %29, 32
  br i1 %30, label %31, label %35

31:                                               ; preds = %24
  %32 = load i8*, i8** @PICE_strtok.szCurrString, align 8
  %33 = load i64, i64* %6, align 8
  %34 = getelementptr inbounds i8, i8* %32, i64 %33
  store i8 0, i8* %34, align 1
  br label %39

35:                                               ; preds = %24
  br label %36

36:                                               ; preds = %35
  %37 = load i64, i64* %6, align 8
  %38 = add i64 %37, 1
  store i64 %38, i64* %6, align 8
  br label %20

39:                                               ; preds = %31, %20
  %40 = load i8*, i8** @PICE_strtok.szCurrString, align 8
  store i8* %40, i8** %4, align 8
  %41 = load i8*, i8** @PICE_strtok.szCurrString, align 8
  %42 = load i64, i64* %6, align 8
  %43 = getelementptr inbounds i8, i8* %41, i64 %42
  %44 = getelementptr inbounds i8, i8* %43, i64 1
  store i8* %44, i8** @PICE_strtok.szCurrString, align 8
  %45 = load i8*, i8** %4, align 8
  store i8* %45, i8** %2, align 8
  br label %46

46:                                               ; preds = %39, %18
  %47 = load i8*, i8** %2, align 8
  ret i8* %47
}

declare dso_local i32 @CompactString(i8*) #1

declare dso_local i64 @PICE_strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
